--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
     padding: 0;
     border: none;
     outline: none;
-    font-family: "VT323", sans-serif;
-    font-size: 25px;
     color: #ffffff;
 }
 
 body {
+    font-family: "VT323", sans-serif;
+    font-size: 25px;
     background: #1A3A45;
     display: flex;
     flex-direction: column;
@@ -121,7 +121,87 @@ canvas {
     padding-bottom: 5px;
 }
 
+/* START GAME CONTAINER */
+#startGameModal {
+    /* display: none; */
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    /* Enable scroll if needed */
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
+.start-game-modal {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.start-game-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Poppins;
+    font-size: 18px;
+    width: 600px;
+    height: 400px;
+    background-color: #1A3A45;
+    outline: #1e424e solid 15px;
+    border-radius: 25px;
+}
+
+#user-form {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 5px;
+}
+
+#name,
+#level {
+    font-family: Poppins;
+    font-size: 18px;
+    width: 400px;
+    height: 35px;
+    color: #1A3A45;
+    background-color: #DDE2E3;
+    border-radius: 5px;
+    margin-bottom: 11px;
+}
+
+select option {
+    font-family: Poppins;
+    color: #1A3A45;
+    background-color: #DDE2E3;
+    border-radius: 5px;
+}
+
+#startButton {
+    font-family: Poppins;
+    display: block;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 5px 15px;
+    font-size: 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+#startButton:hover,
+#startButton:focus {
+    background-color: #3b8b3e;
+    cursor: pointer;
+}
+
+/* GAME OVER MODAL */
 #gameOverModal {
     display: none;
     position: fixed;
@@ -146,18 +226,21 @@ canvas {
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    border-radius: 25px;
-    gap: 30px;
+    align-items: center;
+    font-family: Poppins;
+    font-size: 18px;
     width: 600px;
-    height: 300px;
+    height: 400px;
     background-color: #1A3A45;
+    outline: #1e424e solid 15px;
+    border-radius: 25px;
 }
 
 .game-over-content p {
-    color: #ff3300;
+    color: #cd2900;
     font-size: 50px;
+    font-weight: bold;
 }
 
 .close {
@@ -175,9 +258,35 @@ canvas {
     cursor: pointer;
 }
 
+.game-over-content p:nth-child(3) {
+    margin-top: 5px;
+    color: #ffffff;
+    font-size: 25px;
+}
+
+.game-over-content table {
+    margin-top: 5px;
+    width: 75%;
+}
+
+tr th {
+    border-bottom: 3px solid #fff;
+    padding: 5px;
+}
+
+tr td {
+    text-align: center;
+    padding: 5px;
+}
+
 
 /* START Countdown style */
-#countdown {
+.countdown {
+    font-family: Poppins;
+    font-weight: bold;
+}
+
+.countdown p {
     position: fixed;
     /* text-align: center; */
     display: none;
@@ -192,9 +301,10 @@ canvas {
     font-size: 23vh;
     transform: translate(-50%, -50%);
 }
+
 /* END Countdown style */
 
-#startButton {
+/* #startButton {
     display: block;
     background-color: #4CAF50;
     color: white;
@@ -209,7 +319,7 @@ canvas {
 #startButton:focus {
     background-color: #3b8b3e;
     cursor: pointer;
-}
+} */
 
 
 
