--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
     padding: 0;
     border: none;
     outline: none;
-    font-family: "VT323", sans-serif;
-    font-size: 25px;
     color: #ffffff;
 }
 
 body {
+    font-family: "VT323", sans-serif;
+    font-size: 25px;
     background: #1A3A45;
     display: flex;
     flex-direction: column;
@@ -121,7 +121,90 @@ canvas {
     padding-bottom: 5px;
 }
 
+/* START GAME CONTAINER */
+#startGameModal {
+    /* display: none; */
+    position: fixed;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    /* Enable scroll if needed */
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.5);
+}
 
+.start-game-modal {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.start-game-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: Poppins;
+    font-size: 18px;
+    width: 600px;
+    height: 400px;
+    background-color: #1A3A45;
+    outline: #1e424e solid 15px;
+    border-radius: 25px;
+}
+
+#user-form {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    gap: 5px;
+}
+
+#name,
+#level {
+    font-family: Poppins;
+    font-size: 18px;
+    width: 400px;
+    height: 35px;
+    color: #1A3A45;
+    background-color: #DDE2E3;
+    border-radius: 5px;
+    margin-bottom: 11px;
+}
+
+select option {
+    font-family: Poppins;
+    color: #1A3A45;
+    background-color: #DDE2E3;
+    border-radius: 5px;
+}
+
+#startButton,
+.open-game {
+    font-family: Poppins;
+    display: block;
+    background-color: #4CAF50;
+    color: white;
+    border: none;
+    padding: 5px 15px;
+    font-size: 20px;
+    border-radius: 5px;
+    margin-top: 10px;
+}
+
+#startButton:hover,
+#startButton:focus,
+.open-game:hover,
+.open-game:focus {
+    background-color: #3b8b3e;
+    cursor: pointer;
+}
+
+/* GAME OVER MODAL */
 #gameOverModal {
     display: none;
     position: fixed;
@@ -146,18 +229,21 @@ canvas {
     position: relative;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
-    border-radius: 25px;
-    gap: 30px;
+    align-items: center;
+    font-family: Poppins;
+    font-size: 18px;
     width: 600px;
-    height: 300px;
+    height: 400px;
     background-color: #1A3A45;
+    outline: #1e424e solid 15px;
+    border-radius: 25px;
 }
 
 .game-over-content p {
-    color: #ff3300;
+    color: #cd2900;
     font-size: 50px;
+    font-weight: bold;
 }
 
 .close {
@@ -175,9 +261,35 @@ canvas {
     cursor: pointer;
 }
 
+.game-over-content p:nth-child(3) {
+    margin-top: 5px;
+    color: #ffffff;
+    font-size: 25px;
+}
+
+.game-over-content table {
+    margin-top: 5px;
+    width: 75%;
+}
+
+tr th {
+    border-bottom: 3px solid #fff;
+    padding: 5px;
+}
+
+tr td {
+    text-align: center;
+    padding: 5px;
+}
+
 
 /* START Countdown style */
-#countdown {
+.countdown {
+    font-family: Poppins;
+    font-weight: bold;
+}
+
+.countdown p {
     position: fixed;
     /* text-align: center; */
     display: none;
@@ -192,25 +304,70 @@ canvas {
     font-size: 23vh;
     transform: translate(-50%, -50%);
 }
-/* END Countdown style */
 
-#startButton {
-    display: block;
-    background-color: #4CAF50;
-    color: white;
-    border: none;
-    padding: 10px 25px;
-    font-size: 20px;
-    border-radius: 5px;
-    margin-top: 10px;
+.landing-page {
+    z-index: 10;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    /* Efek transisi */
+    transition: all 0.5s;
 }
 
-#startButton:hover,
-#startButton:focus {
-    background-color: #3b8b3e;
-    cursor: pointer;
+.landing-page img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
+.landing-page .content {
+    position: absolute;
+    width: 80%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    gap: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.landing-page .content p {
+    font-family: Poppins;
+    font-size: 90px;
+    font-weight: bold;
+    text-align: center;
+    color: #FFB900;
+    text-shadow: 0.0px 10.0px 0.02px #333, 9.8px 2.1px 0.02px #333, 4.2px -9.1px 0.02px #333, -8.0px -6.0px 0.02px #333, -7.6px 6.5px 0.02px #333, 4.8px 8.8px 0.02px #333, 9.6px -2.8px 0.02px #333, -0.7px -10.0px 0.02px #333, -9.9px -1.5px 0.02px #333, -3.5px 9.4px 0.02px #333, 8.4px 5.4px 0.02px #333, 7.1px -7.0px 0.02px #333, -5.4px -8.4px 0.02px #333, -9.4px 3.5px 0.02px #333, 1.4px 9.9px 0.02px #333, 10.0px 0.8px 0.02px #333, 2.9px -9.6px 0.02px #333, -8.7px -4.8px 0.02px #333, -6.6px 7.5px 0.02px #333, 5.9px 8.0px 0.02px #333, 9.1px -4.1px 0.02px #333, -2.1px -9.8px 0.02px #333, -10.0px -0.1px 0.02px #333, -2.2px 9.8px 0.02px #333, 9.1px 4.2px 0.02px #333, 6.1px -8.0px 0.02px #333, -6.5px -7.6px 0.02px #333, -8.8px 4.7px 0.02px #333, 2.7px 9.6px 0.02px #333, 10.0px -0.6px 0.02px #333, 1.5px -9.9px 0.02px #333, -9.3px -3.6px 0.02px #333, -5.5px 8.4px 0.02px #333, 7.0px 7.2px 0.02px #333, 8.5px -5.3px 0.02px #333, -3.4px -9.4px 0.02px #333, -9.9px 1.3px 0.02px #333, -0.8px 10.0px 0.02px #333, 9.6px 2.9px 0.02px #333, 4.9px -8.7px 0.02px #333, -7.5px -6.7px 0.02px #333, -8.1px 5.9px 0.02px #333, 4.0px 9.2px 0.02px #333, 9.8px -2.0px 0.02px #333, 0.2px -10.0px 0.02px #333, -9.7px -2.3px 0.02px #333, -4.3px 9.0px 0.02px #333, 7.9px 6.1px 0.02px #333
+}
+
+.open-game {
+    animation: pulse 1s infinite;
+}
+
+/* Denyut */
+@keyframes pulse {
+    0% {
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.1);
+    }
+
+    100% {
+        transform: scale(1);
+    }
+}
+
+/* RESPONSIVE BREAKPOINT */
+/* ukuran min desktop */
+@media screen and (min-width: 769px) {
+    .arrow-keys {
+        display: none;
+    }
+}
 
 
 /* RESPONSIVE BREAKPOINT */
@@ -227,7 +384,7 @@ canvas {
 /* ukuran mobile */
 @media screen and (max-width: 576px) {
     .head-container {
-        height: 100px;
+        height: 150px;
     }
 
     .head-container img {
@@ -247,27 +404,42 @@ canvas {
     canvas {
         width: 100%;
     }
+
+    .start-game-content {
+        width: 90%;
+        padding: 1rem;
+    }
+
+    #user-form {
+        width: 100%;
+    }
+
+    #name,
+    #level {
+        width: 90%;
+    }
+
+    .landing-page {
+        height: 100%;
+    }
+
+    .arrow-keys {
+        display: block;
+    }
 }
 
-.container-keys {
-    width: 200px;
-    height: 200px;
+.arrow-keys {
     margin-top: 30px;
-
-}
-
-.container-keys .arrow-keys {
-    position: fixed;
     width: 200px;
     height: 200px;
 }
 
-.container-keys .overlap-group {
+.overlap-group {
     position: relative;
     height: 200px;
 }
 
-.container-keys #key-up {
+#key-up {
     position: absolute;
     width: 132px;
     height: 92px;
@@ -275,7 +447,7 @@ canvas {
     left: 34px;
 }
 
-.container-keys #key-left {
+#key-left {
     position: absolute;
     width: 92px;
     height: 132px;
@@ -283,7 +455,7 @@ canvas {
     left: 0;
 }
 
-.container-keys #key-right {
+#key-right {
     position: absolute;
     width: 92px;
     height: 132px;
@@ -291,7 +463,7 @@ canvas {
     left: 108px;
 }
 
-.container-keys #key-down {
+#key-down {
     position: absolute;
     width: 132px;
     height: 92px;
@@ -299,8 +471,8 @@ canvas {
     left: 34px;
 }
 
-.container-keys #pause-key,
-.container-keys #play-key {
+#pause-key,
+#play-key {
     position: absolute;
     width: 70px;
     height: 70px;
