--- a/style.css
+++ b/style.css
@@ -165,6 +165,7 @@ canvas {
     background-color: #1A3A45;
     outline: #1e424e solid 15px;
     border-radius: 25px;
+    transition: all .2s;
 }
 
 #user-form {
@@ -255,6 +256,7 @@ select option {
     background-color: #1A3A45;
     outline: #1e424e solid 15px;
     border-radius: 25px;
+    transition: all .2s;
 }
 
 .game-over-content p {
