--- a/style.css
+++ b/style.css
@@ -331,13 +331,20 @@ select option {
     font-weight: bold;
     font-size: 18px;
     cursor: pointer;
-    border-top-right-radius: 12px;
+    border-radius: 12px;
+    border-collapse: collapse;
+    transition: border .3s ease-in-out, background-color 0.2s ease-in-out;
 }
 
 .leaderboard-content table {
     /* margin-top: 5px; */
     width: 75%;
     padding: .5em 1em;
+}
+
+#topByLevel {
+    visibility: hidden;
+    transition: all .5s;
 }
 
 tr th {
