--- a/style.css
+++ b/style.css
@@ -139,6 +139,39 @@ canvas {
     padding-bottom: 5px;
 }
 
+/* News Display */
+#newsModal {
+    display: none;
+}
+
+.news-modal {
+    position: fixed;
+    top: 15%;
+    left: 25%;
+    transform: translate(-50%, -50%);
+    background-color: #1A3A45;
+    outline: #1e424e solid 15px;
+    border-radius: 25px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    width: 30%;
+    font-size: 80%;
+}
+
+.news-content p {
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+
+.news-content button {
+    margin-top: 5%;
+    border-radius: 10px;
+    display: block;
+    margin: 0 auto;
+}
+
+
 /* START GAME & GAME OVER CONTAINER */
 #startGameModal,
 #gameOverModal {
@@ -245,6 +278,32 @@ select option {
     color: #cd2900;
 }
 
+.game-over-content p {
+    margin-top: 5px;
+    font-weight: 600;
+    color: #ffffff;
+    font-size: 1.5em;
+}
+
+.game-over-content table {
+    margin-top: 5px;
+    width: 75%;
+}
+
+#leaderboardIcon {
+    position: absolute;
+    width: 2em;
+    top: 15px;
+    left: 20px;
+    cursor: pointer;
+    padding: .5em;
+}
+
+#leaderboardIcon:hover {
+    background-color: rgba(0, 98, 110, 0.5);
+}
+
+#closeNews,
 .close {
     position: absolute;
     color: #aaaaaa;
@@ -254,6 +313,8 @@ select option {
     right: 20px;
 }
 
+#closeNews:hover,
+#closeNews:focus,
 .close:hover,
 .close:focus {
     color: #727272;
@@ -342,6 +403,25 @@ tr td {
     text-align: center;
     color: #FFB900;
     text-shadow: 0.0px 10.0px 0.02px #333, 9.8px 2.1px 0.02px #333, 4.2px -9.1px 0.02px #333, -8.0px -6.0px 0.02px #333, -7.6px 6.5px 0.02px #333, 4.8px 8.8px 0.02px #333, 9.6px -2.8px 0.02px #333, -0.7px -10.0px 0.02px #333, -9.9px -1.5px 0.02px #333, -3.5px 9.4px 0.02px #333, 8.4px 5.4px 0.02px #333, 7.1px -7.0px 0.02px #333, -5.4px -8.4px 0.02px #333, -9.4px 3.5px 0.02px #333, 1.4px 9.9px 0.02px #333, 10.0px 0.8px 0.02px #333, 2.9px -9.6px 0.02px #333, -8.7px -4.8px 0.02px #333, -6.6px 7.5px 0.02px #333, 5.9px 8.0px 0.02px #333, 9.1px -4.1px 0.02px #333, -2.1px -9.8px 0.02px #333, -10.0px -0.1px 0.02px #333, -2.2px 9.8px 0.02px #333, 9.1px 4.2px 0.02px #333, 6.1px -8.0px 0.02px #333, -6.5px -7.6px 0.02px #333, -8.8px 4.7px 0.02px #333, 2.7px 9.6px 0.02px #333, 10.0px -0.6px 0.02px #333, 1.5px -9.9px 0.02px #333, -9.3px -3.6px 0.02px #333, -5.5px 8.4px 0.02px #333, 7.0px 7.2px 0.02px #333, 8.5px -5.3px 0.02px #333, -3.4px -9.4px 0.02px #333, -9.9px 1.3px 0.02px #333, -0.8px 10.0px 0.02px #333, 9.6px 2.9px 0.02px #333, 4.9px -8.7px 0.02px #333, -7.5px -6.7px 0.02px #333, -8.1px 5.9px 0.02px #333, 4.0px 9.2px 0.02px #333, 9.8px -2.0px 0.02px #333, 0.2px -10.0px 0.02px #333, -9.7px -2.3px 0.02px #333, -4.3px 9.0px 0.02px #333, 7.9px 6.1px 0.02px #333
+}
+
+.landing-page .icon-news {
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    gap: 15px;
+    width: 55px;
+    height: 55px;
+    background-color: transparent;
+    border-radius: 100%;
+    /* background-color: #fff; */
+    /* border-radius: 100%; */
+    /* outline: #0D1D23 solid 5px; */
+}
+
+.landing-page .icon-news:hover {
+    cursor: pointer;
+    background-color: #e2e2e2;
 }
 
 .open-game {
