--- a/style.css
+++ b/style.css
@@ -141,7 +141,8 @@ canvas {
 
 /* START GAME & GAME OVER CONTAINER */
 #startGameModal,
-#gameOverModal {
+#gameOverModal,
+#leaderboard {
     /* display: none; */
     position: fixed;
     z-index: 1;
@@ -155,7 +156,8 @@ canvas {
 }
 
 .start-game-modal,
-.game-over-modal {
+.game-over-modal,
+.leaderboard-modal {
     width: 100%;
     height: 100%;
     display: flex;
@@ -164,7 +166,8 @@ canvas {
 }
 
 .start-game-content,
-.game-over-content {
+.game-over-content,
+.leaderboard-content {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -196,6 +199,7 @@ canvas {
     color: #1A3A45;
     border-radius: 5px;
     margin-bottom: 11px;
+    padding: 0 .5em;
 }
 
 #level {
@@ -245,6 +249,31 @@ select option {
     color: #cd2900;
 }
 
+.game-over-content p {
+    margin-top: 5px;
+    font-weight: 600;
+    color: #ffffff;
+    font-size: 1.5em;
+}
+
+.game-over-content table {
+    margin-top: 5px;
+    width: 75%;
+}
+
+#leaderboardIcon {
+    position: absolute;
+    width: 2em;
+    top: 15px;
+    left: 20px;
+    cursor: pointer;
+    padding: .5em;
+}
+
+#leaderboardIcon:hover {
+    background-color: rgba(0, 98, 110, 0.5);
+}
+
 .close {
     position: absolute;
     color: #aaaaaa;
@@ -260,16 +289,62 @@ select option {
     cursor: pointer;
 }
 
-.game-over-content p {
-    margin-top: 5px;
-    font-weight: 600;
-    color: #ffffff;
-    font-size: 1.5em;
+/* LEADERBOARD MODAL */
+#leaderboard {
+    display: none;
 }
 
-.game-over-content table {
-    margin-top: 5px;
+.leaderboard-content {
+    position: relative;
+}
+
+.leaderboard-content h1 {
+    color: #cd2900;
+}
+
+.closeLeaderboard {
+    position: absolute;
+    color: #aaaaaa;
+    font-size: 28px;
+    font-weight: bold;
+    top: 15px;
+    right: 20px;
+}
+
+.closeLeaderboard:hover,
+.closeLeaderboard:focus {
+    color: #727272;
+    cursor: pointer;
+}
+
+.level-navigation {
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+.level-navigation button {
+    margin: 0 5px;
+    padding: .4em 1em;
+    color: #fff;
+    background: none;
+    font-weight: bold;
+    font-size: 18px;
+    cursor: pointer;
+    border-radius: 12px;
+    border-collapse: collapse;
+    transition: border .3s ease-in-out, background-color 0.2s ease-in-out;
+}
+
+.leaderboard-content table {
+    /* margin-top: 5px; */
     width: 75%;
+    padding: .5em 1em;
+}
+
+#topByLevel {
+    visibility: hidden;
+    transition: all .5s;
 }
 
 tr th {
@@ -517,11 +592,19 @@ tr td {
         font-size: 0.6em;
     }
 
-    #name,
+    /* #name,
     #level {
         font-size: 1em;
-        width: 100%;
+        padding: 0 10px;
     }
+
+    #name {
+        width: 10px;
+    }
+
+    #level {
+        width: 100%;
+    } */
 
     select option {
         font-size: 0.75em;
@@ -533,6 +616,18 @@ tr td {
 
     /* GAME OVER MODAL */
     .close {
+        top: 5px;
+        right: 15px;
+    }
+
+    #leaderboardIcon {
+        top: 10px;
+        left: 15px;
+        padding: 0;
+        width: 2.3em;
+    }
+
+    .closeLeaderboard {
         top: 5px;
         right: 15px;
     }
@@ -570,11 +665,18 @@ tr td {
         padding: 1rem;
     }
 
+    .leaderboard-content table {
+        width: 95%;
+    }
+
     #user-form {
         width: 100%;
     }
 
-    #name,
+    #name {
+        width: 95%;
+    }
+
     #level {
         width: 100%;
     }
@@ -630,4 +732,16 @@ tr td {
     height: 70px;
     top: 65px;
     left: 65px;
+}
+
+.circle-cursor {
+    height: .7em;
+    width: .7em;
+    border-radius: 24px;
+    background-color: black;
+    position: fixed;
+    top: -4em;
+    left: -4em;
+    pointer-events: none;
+    z-index: 99999999;
 }
