--- a/style.css
+++ b/style.css
@@ -139,40 +139,6 @@ canvas {
     padding-bottom: 5px;
 }
 
-/* News Display */
-#newsModal {
-    display: none;
-}
-
-.news-modal {
-    position: fixed;
-    top: 15%;
-    left: 25%;
-    transform: translate(-50%, -50%);
-    background-color: #1A3A45;
-    outline: #1e424e solid 15px;
-    border-radius: 25px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    text-align: center;
-    width: 30%;
-    font-size: 80%;
-    transition: all .6s ease-in-out;
-}
-
-.news-content p {
-    margin-top: 2%;
-    margin-bottom: 1%;
-}
-
-.news-content button {
-    margin-top: 5%;
-    border-radius: 10px;
-    display: block;
-    margin: 0 auto;
-}
-
-
 /* START GAME & GAME OVER CONTAINER */
 #startGameModal,
 #gameOverModal,
@@ -318,15 +284,17 @@ select option {
 
 #leaderboardIcon {
     position: absolute;
-    width: 2em;
+    width: 50px;
     top: 15px;
     left: 20px;
     cursor: pointer;
     padding: .5em;
+    animation: shakeY 1s infinite;
 }
 
 #leaderboardIcon:hover {
-    background-color: rgba(0, 98, 110, 0.5);
+    filter: drop-shadow(0px 0px 7px #ffffff55);
+
 }
 
 #closeNews,
@@ -358,6 +326,7 @@ select option {
 
 .leaderboard-content h1 {
     color: #cd2900;
+    padding: 15px;
 }
 
 .closeLeaderboard {
@@ -376,12 +345,14 @@ select option {
 }
 
 .level-navigation {
+    width: 90%;
     display: flex;
     align-items: flex-start;
-    justify-content: flex-start;
+    justify-content: space-around;
 }
 
 .level-navigation button {
+    width: 30%;
     margin: 0 5px;
     padding: .4em 1em;
     color: #fff;
@@ -396,7 +367,7 @@ select option {
 
 .leaderboard-content table {
     /* margin-top: 5px; */
-    width: 75%;
+    width: 90%;
     padding: .5em 1em;
 }
 
@@ -450,7 +421,7 @@ tr td {
     transition: all 0.5s;
 }
 
-.landing-page img {
+.landing-page .bg-cover {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -478,27 +449,79 @@ tr td {
     text-shadow: 0.0px 10.0px 0.02px #333, 9.8px 2.1px 0.02px #333, 4.2px -9.1px 0.02px #333, -8.0px -6.0px 0.02px #333, -7.6px 6.5px 0.02px #333, 4.8px 8.8px 0.02px #333, 9.6px -2.8px 0.02px #333, -0.7px -10.0px 0.02px #333, -9.9px -1.5px 0.02px #333, -3.5px 9.4px 0.02px #333, 8.4px 5.4px 0.02px #333, 7.1px -7.0px 0.02px #333, -5.4px -8.4px 0.02px #333, -9.4px 3.5px 0.02px #333, 1.4px 9.9px 0.02px #333, 10.0px 0.8px 0.02px #333, 2.9px -9.6px 0.02px #333, -8.7px -4.8px 0.02px #333, -6.6px 7.5px 0.02px #333, 5.9px 8.0px 0.02px #333, 9.1px -4.1px 0.02px #333, -2.1px -9.8px 0.02px #333, -10.0px -0.1px 0.02px #333, -2.2px 9.8px 0.02px #333, 9.1px 4.2px 0.02px #333, 6.1px -8.0px 0.02px #333, -6.5px -7.6px 0.02px #333, -8.8px 4.7px 0.02px #333, 2.7px 9.6px 0.02px #333, 10.0px -0.6px 0.02px #333, 1.5px -9.9px 0.02px #333, -9.3px -3.6px 0.02px #333, -5.5px 8.4px 0.02px #333, 7.0px 7.2px 0.02px #333, 8.5px -5.3px 0.02px #333, -3.4px -9.4px 0.02px #333, -9.9px 1.3px 0.02px #333, -0.8px 10.0px 0.02px #333, 9.6px 2.9px 0.02px #333, 4.9px -8.7px 0.02px #333, -7.5px -6.7px 0.02px #333, -8.1px 5.9px 0.02px #333, 4.0px 9.2px 0.02px #333, 9.8px -2.0px 0.02px #333, 0.2px -10.0px 0.02px #333, -9.7px -2.3px 0.02px #333, -4.3px 9.0px 0.02px #333, 7.9px 6.1px 0.02px #333
 }
 
-.landing-page .icon-news {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    gap: 15px;
-    width: 55px;
-    height: 55px;
-    background-color: transparent;
-    border-radius: 100%;
-    /* background-color: #fff; */
-    /* border-radius: 100%; */
-    /* outline: #0D1D23 solid 5px; */
-}
-
-.landing-page .icon-news:hover {
-    cursor: pointer;
-    background-color: #e2e2e2;
-}
-
 .open-game {
     animation: pulse 1s infinite;
+}
+
+/* News Display */
+.news {
+    position: absolute;
+    display: flex;
+    gap: 35px;
+    top: 30px;
+    left: 30px;
+}
+
+.news img {
+    width: 60px;
+    height: 60px;
+    filter: drop-shadow(5px 5px 5px #22222255);
+    animation: shakeY 1s infinite;
+}
+
+.news img:hover {
+    cursor: pointer;
+}
+
+.news-content {
+    display: none;
+}
+
+.news-content {
+    position: relative;
+    top: 15px;
+    width: 40%;
+    padding: 15px;
+    padding-right: 30px;
+    text-align: left;
+    background-color: #1e424e;
+    border: 8px solid #1A3A45;
+    border-radius: 30px;
+    filter: drop-shadow(5px 5px 5px #22222255);
+    font-family: Poppins;
+    font-size: 0.75em;
+    transition: all .3s ease-in-out;
+}
+
+.news-content:before {
+    content: ' ';
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: auto;
+    left: -40px;
+    top: -8px;
+    bottom: auto;
+    border: 32px solid;
+    border-color: #1A3A45 transparent transparent transparent;
+}
+
+.news-content:after {
+    content: ' ';
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: auto;
+    left: -20px;
+    top: 0px;
+    bottom: auto;
+    border: 20px solid;
+    border-color: #1e424e transparent transparent transparent;
+}
+
+#closeNews {
+    top: 10px;
+    right: 15px;
 }
 
 /* Denyut */
@@ -513,6 +536,33 @@ tr td {
 
     100% {
         transform: scale(1);
+    }
+}
+
+/* ShakeY */
+@keyframes shakeY {
+    0% {
+        transform: translateY(0);
+    }
+
+    20% {
+        transform: translateY(-5px);
+    }
+
+    40% {
+        transform: translateY(5px);
+    }
+
+    60% {
+        transform: translateY(-5px);
+    }
+
+    80% {
+        transform: translateY(5px);
+    }
+
+    100% {
+        transform: translateY(0);
     }
 }
 
@@ -632,13 +682,18 @@ tr td {
     }
 
     /* HOME / Landing Page */
-    .landing-page img {
+    .landing-page .bg-cover {
         position: relative;
         object-position: -300px 0px;
     }
 
     .landing-page .content p {
         font-size: 2.5em;
+    }
+
+    /* NEWS */
+    .news-content {
+        width: 50%;
     }
 }
 
@@ -647,7 +702,7 @@ tr td {
 @media screen and (max-width: 576px) {
 
     /* HOME / Landing Page */
-    .landing-page img {
+    .landing-page .bg-cover {
         position: relative;
         object-position: -480px 0px;
     }
@@ -660,9 +715,27 @@ tr td {
         font-size: 0.75em;
     }
 
+    /* NEWS */
+    .news {
+        top: 25px;
+        left: 25px;
+    }
+
+    .news-content {
+        font-size: 0.6em;
+    }
+
+    #closeNews {
+        font-size: 20px;
+        font-weight: bold;
+        top: 6px;
+        right: 10px;
+    }
+
     /* START GAME MODAL */
     .start-game-content,
-    .game-over-content {
+    .game-over-content,
+    .leaderboard-content {
         width: 100%;
         height: 380px;
         margin: 20px;
@@ -699,10 +772,10 @@ tr td {
     }
 
     #leaderboardIcon {
-        top: 10px;
+        top: 15px;
         left: 15px;
         padding: 0;
-        width: 2.3em;
+        width: 35px;
     }
 
     .closeLeaderboard {
